modules/ec2/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.81.0"
    }
  }
}
resource "aws_security_group" "main" {
  name        = "${var.name}-${var.env}-sg"
  description = "${var.name}-${var.env}-sg"
  vpc_id      = var.vpc_id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = var.bastion_nodes
  }

  ingress {
    from_port   = var.allow_port
    to_port     = var.allow_port
    protocol    = "TCP"
    cidr_blocks = var.allow_sg_cidr
  }

  tags = {
    Name = "${var.name}-${var.env}-sg"
  }
}

resource "aws_launch_template" "main" {
  count                   = var.asg ? 1 : 0
  name                    = "${var.name}-${var.env}-lt"
  image_id                = data.aws_ami.rhel9.image_id
  instance_type           = var.instance_type
  vpc_security_group_ids  = [aws_security_group.main.id]

  user_data = base64encode(templatefile("${path.module}/userdata.sh", {
    env         = var.env
    role_name   = var.name
    vault_token = var.vault_token
  }))

  instance_market_options {
    market_type = "spot"
  }
  tags = {
    Name = "${var.name}-${var.env}-launch-template"
  }
}

resource "aws_autoscaling_group" "main" {
  count               =  var.asg ? 1 : 0
  name                = "${var.name}-${var.env}-auto-scaling-group"
  desired_capacity    = var.capacity["desired"]
  max_size            = var.capacity["max"]
  min_size            = var.capacity["min"]
  vpc_zone_identifier = var.subnet_ids
  target_group_arns   = [aws_lb_target_group.main.*.arn[count.index]]
  load_balancers      = [aws_lb.main.*.arn[count.index]]

  launch_template {
    id      = aws_launch_template.main.*.id[0]
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    propagate_at_launch = true
    value               = "${var.name}-${var.env}"
  }
}

resource "aws_instance" "main" {
  count                  = var.asg ? 0 : 1
  ami                    = data.aws_ami.rhel9.image_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_ids[0]
  vpc_security_group_ids = [aws_security_group.main.id]

  user_data = base64encode(templatefile("${path.module}/userdata.sh", {
    env         = var.env
    role_name   = var.name
    vault_token = var.vault_token
  }))



  tags = {
    Name    = "${var.name}-${var.env}"
    Monitor = "true"
  }

  lifecycle {
    ignore_changes = [
      ami
    ]
  }

}

resource "aws_route53_record" "instance" {
  count   = var.asg ? 0 : 1
  zone_id = var.zone_id
  name    = "${var.name}"
  type    = "A"
  ttl     = 10
  records = [aws_instance.main.*.private_ip[count.index]]
}
resource "aws_security_group" "load-balancer-sg" {
  count              = var.asg ? 1 : 0
  name        = "${var.name}-${var.env}-alb-sg"
  description = "${var.name}-${var.env}-alb-sg"
  vpc_id      = var.vpc_id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = var.allow_sg_cidr
  }

  tags = {
    Name = "${var.name}-${var.env}-alb-sg"
  }
}

resource "aws_lb" "main" {
  count              = var.asg ? 1 : 0
  name               = "${var.name}"
  internal           = true
  load_balancer_type = "application"
  security_groups    = [aws_security_group.load-balancer-sg.*.id[count.index]]
  subnets            = var.subnet_ids

  tags = {
    Environment = "${var.name}"
  }
}

# resource "aws_lb_target_group" "main" {
#   count              = var.asg ? 1 : 0
#   name               = "${var.name}"
#   port               = var.allow_port
#   protocol           = "HTTP"
#   vpc_id             = var.vpc_id
# }
#
#
# resource "aws_lb_listener" "front_end" {
#   count              = var.asg ? 1 : 0
#   load_balancer_arn = aws_lb.main.*.arn[count.index]
#   port              = "80"
#   protocol          = "HTTP"
#
#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.main.*.arn[count.index]
#   }
# }
